# MyAL1S

./: .gitignore  .gitmodules  README.md  run.sh
Plan/: 2026-06-19_campus-assistant-architecture-plan.md  2026-06-19_p0-vertical-slice-implementation-plan.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  composer.py  llm.py  main.py  mcp_gateway.py  permissions.py  settings.py  store.py  uploads.py
backend/app/routes/: approvals.py  chat.py  dashboard.py  deterministic.py  permissions.py  session.py  submit.py  uploads.py
backend/certs/: README.md
backend/tests/: conftest.py  test_app.py  test_composer.py  test_llm.py  test_mcp_gateway.py  test_permissions.py  test_store.py  test_uploads.py
docs/: architecture.md  development.md  mcp-protocol.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Calendar.tsx  ChatBox.tsx  CustomItemEditor.tsx  Dashboard.tsx  DeferredPanel.tsx  ErrorBoundary.tsx  NewNoticesPanel.tsx  TodoModule.tsx  api.ts  format.ts  main.tsx  stars.tsx  styles.css  widgets.tsx
frontend/tests/: App.test.tsx  fixtures.ts  format.test.ts  setup.ts  widgets.test.tsx
quality_reports/plans/: 2026-06-22_p2-write-ops.md  2026-06-23_p2-ux-iteration.md  2026-06-23_p3-treehole.md  zesty-growing-clarke.md
quality_reports/session_logs/: 2026-06-20_otp-once-sso.md  2026-06-21_login-500-diagnosis.md  2026-06-21_p1-increment-a-readonly-tools.md  2026-06-21_p1-increment-b-backend.md  2026-06-21_p1-increment-b-review-fixes.md  2026-06-21_p1-increment-c-frontend.md  (+7 more)
