[project]
name = "myal1s-backend"
version = "0.1.0"
description = "MyAL1S backend — FastAPI + PydanticAI agent over the pku3b MCP server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    # pydantic-ai-slim keeps the install lean; extras pull the Anthropic + OpenAI
    # providers (OpenAI for OpenAI-compatible relays via a custom base URL) and
    # the MCP stdio client. Pinned <2: P0 uses MCPServerStdio, which v2 replaces
    # with MCPToolset (see mcp_gateway.py).
    "pydantic-ai-slim[anthropic,openai,mcp]>=1.0,<2",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    # P1 persistence (stars / custom items / seen-ids / conversations) — a single
    # embedded SQLite file; async-native, composes with FastAPI's loop.
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
